translation-tool/inputs/source_meta/objects/Hsvc_BillingSystemErrorMsgLabels__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used in Billing - It contains all the error codes received from Billing system with its Error message label in Salesforce.</description>
    <fields>
        <fullName>EnglishErrorMsg__c</fullName>
        <label>EnglishErrorMsg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortugeseErrorMsg__c</fullName>
        <label>PortugeseErrorMsg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpanishErrorMsg__c</fullName>
        <label>SpanishErrorMsg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Hsvc_BillingSystemErrorMsgLabels</label>
</CustomObject>